# VRF

./: README.md  autopass.rviz  carla_results.py  rit_results.py  run_vrf_docker.bash  usc_results.py  vrf.sh
catkin_ws/: infra.sh  network_setup_infra.bash  network_setup_vehicle.bash  setup_env.bash  vehicle.sh
catkin_ws/devel/: .catkin  local_setup.sh  setup.sh
catkin_ws/devel/include/fast_gicp/: CompressDiff.h  Transform.h
catkin_ws/devel/include/hdl_global_localization/: QueryGlobalLocalization.h  QueryGlobalLocalizationRequest.h  QueryGlobalLocalizationResponse.h  SetGlobalLocalizationEngine.h  SetGlobalLocalizationEngineRequest.h  SetGlobalLocalizationEngineResponse.h  SetGlobalMap.h  SetGlobalMapRequest.h  SetGlobalMapResponse.h
catkin_ws/devel/include/hdl_localization/: ScanMatchingStatus.h
catkin_ws/devel/include/pcl_ros/: MLSConfig.h
catkin_ws/devel/lib/eaad/: Diff_PCD  Diff_PCD_KDTree  Diff_PCD_Octree
catkin_ws/devel/lib/fast_gicp/: cuda_gicp_align  cuda_ndt_align  decode  gicp_align  gicp_kitti  infra  infra_1  infra_2  infra_3  infra_fawad  infra_test  ndt_vehicle  receive_infra_raw  vehicle_fusion  vehicle_fusion_1  vehicle_fusion_2  vehicle_fusion_3  vehicle_fusion_4  vehicle_fusion_5  vehicle_fusion_icp  vehicle_fusion_test  vehicle_ndt  vehicle_ndt_1  vehicle_ndt_5
catkin_ws/devel/lib/ndt_omp/: align  align_test  ndt_fawad
catkin_ws/devel/lib/pcl_ros/: bag_to_pcd  convert_pcd_to_image  convert_pointcloud_to_image  pcd_to_pointcloud  pointcloud_to_pcd
catkin_ws/devel/lib/pkgconfig/: eaad.pc  fast_gicp.pc  hdl_global_localization.pc  hdl_localization.pc  lidar_localizer.pc  ndt_localizer.pc  ndt_omp.pc  ouster_ros.pc  pcl_conversions.pc  pcl_ros.pc
catkin_ws/devel/lib/python3/dist-packages/fast_gicp/msg/: _CompressDiff.py  _Transform.py  __init__.py
catkin_ws/devel/lib/python3/dist-packages/hdl_global_localization/srv/: _QueryGlobalLocalization.py  _SetGlobalLocalizationEngine.py  _SetGlobalMap.py  __init__.py
catkin_ws/devel/lib/python3/dist-packages/hdl_localization/msg/: _ScanMatchingStatus.py  __init__.py
catkin_ws/devel/lib/python3/dist-packages/pcl_ros/cfg/: MLSConfig.py
catkin_ws/devel/share/common-lisp/ros/fast_gicp/msg/: CompressDiff.lisp  Transform.lisp  _package.lisp  _package_Transform.lisp  fast_gicp-msg.asd
catkin_ws/devel/share/common-lisp/ros/hdl_global_localization/srv/: QueryGlobalLocalization.lisp  SetGlobalLocalizationEngine.lisp  SetGlobalMap.lisp  _package.lisp  _package_QueryGlobalLocalization.lisp  _package_SetGlobalLocalizationEngine.lisp  _package_SetGlobalMap.lisp  hdl_global_localization-srv.asd
catkin_ws/devel/share/common-lisp/ros/hdl_localization/msg/: ScanMatchingStatus.lisp  _package.lisp  _package_ScanMatchingStatus.lisp  hdl_localization-msg.asd
catkin_ws/devel/share/eaad/cmake/: eaad-msg-paths.cmake  eaadConfig.cmake
catkin_ws/devel/share/fast_gicp/cmake/: fast_gicp-msg-extras.cmake  fast_gicp-msg-paths.cmake  fast_gicpConfig.cmake
catkin_ws/devel/share/gennodejs/ros/fast_gicp/msg/: CompressDiff.js  Transform.js  _index.js
catkin_ws/devel/share/gennodejs/ros/hdl_global_localization/srv/: QueryGlobalLocalization.js  SetGlobalLocalizationEngine.js  SetGlobalMap.js  _index.js
catkin_ws/devel/share/gennodejs/ros/hdl_localization/msg/: ScanMatchingStatus.js  _index.js
catkin_ws/devel/share/gennodejs/ros/ouster_ros/srv/: _index.js
catkin_ws/devel/share/hdl_global_localization/cmake/: hdl_global_localization-msg-extras.cmake  hdl_global_localization-msg-paths.cmake  hdl_global_localizationConfig.cmake
catkin_ws/devel/share/hdl_localization/cmake/: hdl_localization-msg-extras.cmake  hdl_localization-msg-paths.cmake  hdl_localizationConfig.cmake
catkin_ws/devel/share/lidar_localizer/cmake/: lidar_localizerConfig.cmake
catkin_ws/devel/share/ndt_localizer/cmake/: ndt_localizer-msg-paths.cmake  ndt_localizerConfig.cmake
catkin_ws/devel/share/ndt_omp/cmake/: ndt_ompConfig.cmake
catkin_ws/devel/share/ouster_ros/cmake/: ouster_ros-msg-paths.cmake  ouster_rosConfig.cmake
catkin_ws/devel/share/pcl_conversions/cmake/: pcl_conversionsConfig.cmake
catkin_ws/devel/share/pcl_ros/cmake/: pcl_rosConfig.cmake
catkin_ws/devel/share/pcl_ros/docs/: VoxelGridConfig-usage.dox  VoxelGridConfig.dox  VoxelGridConfig.wikidoc
catkin_ws/devel/share/roseus/ros/eaad/: manifest.l
catkin_ws/devel/share/roseus/ros/fast_gicp/: manifest.l
catkin_ws/devel/share/roseus/ros/fast_gicp/msg/: CompressDiff.l  Transform.l
catkin_ws/devel/share/roseus/ros/hdl_global_localization/: manifest.l
catkin_ws/devel/share/roseus/ros/hdl_global_localization/srv/: QueryGlobalLocalization.l  SetGlobalLocalizationEngine.l  SetGlobalMap.l
catkin_ws/devel/share/roseus/ros/hdl_localization/: manifest.l
catkin_ws/devel/share/roseus/ros/hdl_localization/msg/: ScanMatchingStatus.l
catkin_ws/devel/share/roseus/ros/ndt_localizer/: manifest.l
catkin_ws/devel/share/roseus/ros/ouster_ros/: manifest.l
catkin_ws/src/fast_gicp/: CMakeLists.txt  package.xml
catkin_ws/src/fast_gicp/include/fast_gicp/gicp/experimental/: fast_gicp_mp_impl.hpp
catkin_ws/src/fast_gicp/src/: infra_3.cpp  infra_pipeline_1.cpp  infra_pipeline_2.cpp  vehicle_fusion_1.cpp  vehicle_fusion_pipeline_2.cpp  vehicle_fusion_pipeline_3.cpp  vehicle_fusion_pipeline_4.cpp  vehicle_fusion_pipeline_5.cpp  vehicle_ndt_5.cpp  vehicle_ndt_pipeline_1.cpp
